Change marker size to prevent overflow on crowdfactor.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1164,8 +1164,8 @@ input[type='text']:focus {
   }
 
   .marker {
-    height: 17px;
-    width: 17px;
+    height: 16px;
+    width: 16px;
   }
 
   .empty {
